example for search with ransack gem

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -250,6 +250,12 @@ input {
   margin-right: 10px;
 }
 
+.div_search{
+text-align: left;
+float: left;
+padding-left: 12px
+}
+
 aside{
   textarea{
     height: 100px;
