--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,5 +1,7 @@
 <li>
- <%= link_to user.name, user %>
+  <%= link_to user.name, user %>
+  <%= user.email %>
+  <%= user.birthday %>
   <% if admin_user? current_user %>
     | <%= link_to "edit", edit_user_path(user.id) %>
     | <%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" } %>
