--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,21 @@
-<% provide(:title, 'All members') %>
+<% provide(:title, "All members") %>
+
 <h1>All members</h1>
-
-<%= will_paginate %>
-
-<ul class="users">
-  <% @users.each do |user| %>
-    <li>
+<div class="row">
+  <div class="span4">
+    <div class="div_search">
+      <%= search_form_for @q do |f| %>
+        <%= f.label :name_or_email_cont %>
+        <%= f.search_field :name_or_email_cont, placeholder: "Input keywords to search" %>
+        <%= f.submit %>
+      <% end %>
+    </div>
+  </div>
+  <div class="span8">
+    <%= will_paginate %>
+    <ul class="users">
       <%= render @users %>
-    </li>
-  <% end %>
-</ul>
-
-<%= will_paginate %>
+    </ul>
+    <%= will_paginate %>
+  </div>
+</div>
